unicorecmsmnm/static/css/style.css
/*  SETTINGS  */

    *, *:before, *:after { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }

/*  GLOBAL  */

    html, body { margin: 0; padding: 0; color: #000; background: #fff; font-size: 1em; font-family: Arial, Helvetica, sans-serif; line-height: 1.5; -webkit-text-size-adjust: none; }
    input, select, textarea { font-size: 95%; font-family: Arial, Helvetica, sans-serif; }
    a { color: #dc5a11; text-decoration: none; }
    .clear { width: 100%; height: 0px; clear: both; display: block; }
    .align-right { float: right; }
    .text-center { text-align: center; }

/*  LANG  */

    .lang {
        padding: 5px 16px;
        text-align: right;
        background: #EBEBEB;
        color: #bbb;
    }
    
    [dir='rtl'] .lang {
        text-align: left;
    }

    .lang .active {
        color: #999;
    }

    .lang-change {
        position: relative;
        top: -3px;
        font-weight: bold;
    }

/*  HEADER  */

    #logo-container { padding: 10px; background: #fff; text-align: center; border-bottom: 2px solid #e9e9e9; }
        #logo-container img { display: block; margin: 0 auto }


/*  BANNER  */

    #banner {}
        #banner img { width: 100%; display: block; }


/*  CONTENT  */

    #content {}
        #content .h1 { padding: 10px;  font-weight: bold;  vertical-align: middle; text-transform: uppercase;}
        #content .h1 img { float: left; padding: 0 10px 0 0; }
        #content .h1 a { display: block; }
        #content .h2 { padding: 10px;  font-weight: bold; text-transform: uppercase; }
            #content .box .item a.pic { float: left; padding: 0 10px 0 0; }
            #content .box .item a.pic img { display: block; }
            #content .box .item .text { margin: 0 0 0 0; }
        #content .intro { padding: 20px; font-weight: bold; text-transform: uppercase; text-align: center;}
        #content .detail { padding: 0 25px; }
        .content li{margin: 15px 0 15px 0;}
        
        .featured{ background: #cd3209; color: #fff; text-align: center; text-transform: uppercase; margin-top: 10px;}
        .featured a { padding: 15px; display: block; border-bottom: 5px solid #dc5a11; text-align: left; color: #fff; }

        .home-content .title {text-transform: uppercase; font-weight: bold;display: block;}
        .home-content img {float: left; margin: 5px 10px 10px 0; }
        [dir='rtl'] .home-content img {float: right; margin: 5px 0 10px 10px; }
        .home-content p {margin-top: 0;}
        .home-content .item {border-top: solid 2px #e4e4e4; padding: 20px;}

/*  MENU  */

    #menu { background: #cd3209; color: #fff; text-align: center; text-transform: uppercase;}
        #menu a { padding: 8px 10px; display: block; border-bottom: 5px solid #dc5a11; text-align: left; color: #fff; }

/* BASE */
.form-search input {border: 0;}
.form-search #q {padding: 10px;}
.form-search {padding:30px 15px; background-color: #dc5a11; color: #fff;}
.form-search p{margin-top: 0; text-transform: uppercase;}
.form-search .btn-search{background-color: #dc5a11; color: #fff;}
/*  FOOTER  */

    #footer { padding: 10px; text-align: center; color: #999; clear: left;}

/* Mobile "preview" for large screens */

    @media screen and (min-width: 1024px) { 
        html {
            background-color: #333;
        }
        body {
            max-width: 320px;
            margin: 0 auto;
        }
    }

